objects/PMC_CPQ_TransactionLog__c.object
<CustomObject>
    <description>This object is used to store transactions details based on SF intergation with external systems.</description>
    <fields>
        <fullName>PMC_CPQ_IntegrationStatus__c</fullName>
        <description>This will show the status of the response of the external callout.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Integration Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_InterfaceURL__c</fullName>
        <description>This is the endpoint that was hit during the transaction.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Interface URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_RequestBody__c</fullName>
        <description>This is the request body sent to the external system.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Request Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ResponseBody__c</fullName>
        <description>This field stores the response body of the request made to the external system.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Response Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Transaction Log</label>
    <listViews>
        <fullName>Account_ship_to_Creation</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
        <columns>NAME</columns>
        <columns>PMC_CPQ_InterfaceURL__c</columns>
        <columns>PMC_CPQ_IntegrationStatus__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PMC_CPQ_InterfaceURL__c</field>
            <operation>equals</operation>
            <value>/http/BPCreation</value>
        </filters>
        <filters>
            <field>PMC_CPQ_InterfaceURL__c</field>
            <operation>equals</operation>
            <value>/http/BPModification</value>
        </filters>
        <filters>
            <field>PMC_CPQ_InterfaceURL__c</field>
            <operation>equals</operation>
            <value>/http/ShipToModification</value>
        </filters>
        <filters>
            <field>PMC_CPQ_InterfaceURL__c</field>
            <operation>equals</operation>
            <value>/http/ShipToCreation</value>
        </filters>
        <label>Account ship-to Creation</label>
    </listViews>
    <listViews>
        <fullName>Allocation_Interface_Log_View</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>PMC_CPQ_IntegrationStatus__c</columns>
        <columns>PMC_CPQ_InterfaceURL__c</columns>
        <columns>PMC_CPQ_ResponseBody__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PMC_CPQ_InterfaceURL__c</field>
            <operation>equals</operation>
            <value>PMC_SS_Allocation__c</value>
        </filters>
        <label>Allocation Interface Log View</label>
        <sharedTo>
            <role>Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Contract_Records1_Interface_Log_View</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>PMC_CPQ_IntegrationStatus__c</columns>
        <columns>PMC_CPQ_InterfaceURL__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PMC_CPQ_InterfaceURL__c</field>
            <operation>equals</operation>
            <value>/http/UpdateContractRecords1</value>
        </filters>
        <label>Contract Records1 Interface Log View</label>
        <sharedTo>
            <role>Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Contract_Records_Interface_Log_View</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>PMC_CPQ_IntegrationStatus__c</columns>
        <columns>PMC_CPQ_InterfaceURL__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PMC_CPQ_InterfaceURL__c</field>
            <operation>equals</operation>
            <value>/http/UpdateContractRecords</value>
        </filters>
        <label>Contract Records Interface Log View</label>
        <sharedTo>
            <role>Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Delivery_Request_interface_log_view</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>PMC_CPQ_IntegrationStatus__c</columns>
        <columns>PMC_CPQ_InterfaceURL__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PMC_CPQ_InterfaceURL__c</field>
            <operation>equals</operation>
            <value>/http/Inbound/ReceiveDeliveryRequest</value>
        </filters>
        <label>Delivery Request Interface Log View</label>
        <sharedTo>
            <role>Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Forecast_Data_Interface_Log_View</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>PMC_CPQ_IntegrationStatus__c</columns>
        <columns>PMC_CPQ_InterfaceURL__c</columns>
        <columns>PMC_CPQ_ResponseBody__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PMC_CPQ_InterfaceURL__c</field>
            <operation>equals</operation>
            <value>PMC_SS_StatisticalBaselineForecastData__c</value>
        </filters>
        <label>Forecast Data Interface Log View</label>
        <sharedTo>
            <role>Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Get_price_interface_log_view</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>PMC_CPQ_IntegrationStatus__c</columns>
        <columns>PMC_CPQ_InterfaceURL__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PMC_CPQ_InterfaceURL__c</field>
            <operation>equals</operation>
            <value>/http/GetPricingDetails</value>
        </filters>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>USD</value>
        </filters>
        <label>Get price Interface Log View</label>
        <sharedTo>
            <role>Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Get_pricing_Interface_Log_View</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>PMC_CPQ_IntegrationStatus__c</columns>
        <columns>PMC_CPQ_InterfaceURL__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PMC_CPQ_InterfaceURL__c</field>
            <operation>equals</operation>
            <value>callout:PMC_CPQ_NamedCredential/http/GetPricingDetails</value>
        </filters>
        <label>Get pricing Interface Log View</label>
        <sharedTo>
            <role>Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Invoice_Interface_Log_View</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>PMC_CPQ_IntegrationStatus__c</columns>
        <columns>PMC_CPQ_ResponseBody__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PMC_CPQ_InterfaceURL__c</field>
            <operation>equals</operation>
            <value>PMC_CPQ_Invoice__c</value>
        </filters>
        <label>Invoice Interface Log View</label>
        <sharedTo>
            <role>Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Invoice_Item_Interface_Log_View</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>PMC_CPQ_IntegrationStatus__c</columns>
        <columns>PMC_CPQ_ResponseBody__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PMC_CPQ_InterfaceURL__c</field>
            <operation>equals</operation>
            <value>PMC_CPQ_InvoiceItem__c</value>
        </filters>
        <label>Invoice Item Interface Log View</label>
        <sharedTo>
            <role>Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Order_Interface_Log_View</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>PMC_CPQ_IntegrationStatus__c</columns>
        <columns>PMC_CPQ_ResponseBody__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PMC_CPQ_InterfaceURL__c</field>
            <operation>equals</operation>
            <value>Order</value>
        </filters>
        <label>Order Interface Log View</label>
        <sharedTo>
            <role>Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Order_Item_Interface_Log_View</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>PMC_CPQ_IntegrationStatus__c</columns>
        <columns>PMC_CPQ_ResponseBody__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PMC_CPQ_InterfaceURL__c</field>
            <operation>equals</operation>
            <value>OrderItem</value>
        </filters>
        <label>Order Item Interface Log View</label>
        <sharedTo>
            <role>Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Order_Request_Status_interface_log_view</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>PMC_CPQ_IntegrationStatus__c</columns>
        <columns>PMC_CPQ_InterfaceURL__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PMC_CPQ_InterfaceURL__c</field>
            <operation>equals</operation>
            <value>/http/OrderRequestStatus</value>
        </filters>
        <label>Order Request Interface Log View</label>
        <sharedTo>
            <role>Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PMC_CPQ_TransactionLogLatest</fullName>
        <columns>NAME</columns>
        <columns>PMC_CPQ_InterfaceURL__c</columns>
        <columns>PMC_CPQ_IntegrationStatus__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Transaction Log Latest</label>
    </listViews>
    <listViews>
        <fullName>PriceFx_FPDOrders_Interface_Log_View</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>PMC_CPQ_IntegrationStatus__c</columns>
        <columns>PMC_CPQ_InterfaceURL__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PMC_CPQ_InterfaceURL__c</field>
            <operation>equals</operation>
            <value>/http/toPriceFx_FPDOrders</value>
        </filters>
        <label>PriceFx_FPDOrders Interface Log View</label>
        <sharedTo>
            <role>Admin</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>TRL-{0000000}</displayFormat>
        <label>Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>